--- a/views/practice.erb
+++ b/views/practice.erb
@@ -1,6 +1,7 @@
+<h1>Why are you playing by yourself?</h2>
 <form action='/score'>
   <div class="form-group">
-    <label for "name">Hi, what's your name?</label>
+    <label for "name">What's your name?</label>
     <input id="name" name="name" class="form-control" type="text" text="Is that you Bob?">
   </div>
   <div class="form-group">
