Completed Player Two game, Player Two Score, Edited app.rb, added a give up? button

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,6 +1,13 @@
 <div>
   <h1>Scrabble Time</h1>
-  <a href="/practice">PRACTICE</a>
-  <br>
-  <a href="/two_player">2 PLAYER</a>
+
+  <form action="/practice">
+    <input class="btn" type="submit" value="Practice?">
+  </form>
+
+  </br>
+
+  <form action="/two_player">
+    <input class="btn" type="submit" value="Two Player">
+  </form>
 </div>
