--- a/views/two_player.erb
+++ b/views/two_player.erb
@@ -1,1 +1,26 @@
-this link also works!
+<h1>Competetive are we?</h2>
+<form action='/two_player_winner'>
+
+<h2>Player One</h2>
+  <div class="form-group">
+    <label for "player1">What's your name?</label>
+    <input id="player1" name="player1" class="form-control" type="text" placeholder="Is that you Bob?">
+  </div>
+  <div class="form-group">
+    <label for="word1">What's your Scrabble word?</label>
+    <input type="text" name="word1" id="word1" class="form-control" placeholder="Is your word 'rabbit'?">
+  </div>
+
+</br>
+
+<h2>Player Two</h2>
+  <div class="form-group">
+    <label for "player2">And what's your name?</label>
+    <input id="player2" name="player2" class="form-control" type="text" placeholder="Is your name Bob too?">
+  </div>
+  <div class="form-group">
+    <label for="word2">What's your Scrabble word?</label>
+    <input type="text" name="word2" id="word2" class="form-control" placeholder="Please say your word isn't 'rabbit'...">
+  </div>
+  <button type="submit" class="btn">Let's play!</button>
+</form>
