--- a/views/practice.erb
+++ b/views/practice.erb
@@ -2,11 +2,11 @@
 <form action='/score'>
   <div class="form-group">
     <label for "name">What's your name?</label>
-    <input id="name" name="name" class="form-control" type="text" text="Is that you Bob?">
+    <input id="name" name="name" class="form-control" type="text" placeholder="Is that you Bob?">
   </div>
   <div class="form-group">
     <label for="word">What's your Scrabble word?</label>
-    <input type="text" name="word" id="word" class="form-control">
+    <input type="text" name="word" id="word" class="form-control" placeholder="Is your word hippo?">
   </div>
   <button type="submit" class="btn">Let's play!</button>
 </form>
