Rewrote method to use hash, add css, fixed bugs created by using hash.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,8 +4,15 @@
 <head>
   <title>Scrabble</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" type= "text/css">
+  <link rel="stylesheet" href="css/styles.css" type= "text/css">
+
 </head>
+
 <body>
+  <div class="header">
+  <h1 class="main_title"><a href="/">  SCRABBLE TIME</a> </h1>
+
+  </div>
   <div class="container">
     <%= yield %>
   </div>
