--- a/views/two_player.erb
+++ b/views/two_player.erb
@@ -1,7 +1,7 @@
 <h1>Competetive are we?</h2>
 <form action='/two_player_winner'>
 
-<h2>Player One</h2>
+<h2 class="player1">Player One</h2>
   <div class="form-group">
     <label for "player1">What's your name?</label>
     <input id="player1" name="player1" class="form-control" type="text" placeholder="Is that you Bob?">
@@ -13,7 +13,7 @@
 
 </br>
 
-<h2>Player Two</h2>
+<h2 class="player2">Player Two</h2>
   <div class="form-group">
     <label for "player2">And what's your name?</label>
     <input id="player2" name="player2" class="form-control" type="text" placeholder="Is your name Bob too?">
