--- a/views/two_player_winner.erb
+++ b/views/two_player_winner.erb
@@ -7,12 +7,12 @@
       <td>Word</td>
       <td>Score</td>
     </tr>
-    <tr>
+    <tr class="player1">
       <td><%= @name1 %></td>
       <td><%= @word1 %></td>
       <td><%= @score1 %></td>
     </tr>
-    <tr>
+    <tr class="player2">
       <td><%= @name2 %></td>
       <td><%= @word2 %></td>
       <td><%= @score2 %></td>
